look i made a shitty google

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google copy</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-   <h1> GOOGLE</h1> 
+    <header>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a>Store</a></li>
+            <li><a class="right-header">Gmail</a></li>
+            <li><a class="right-header">Images</a></li>
+        </ul>
+    </header>
+    <main>
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+        alt="google logo">
+        <form>
+            <input type="search" id="searchbar">
+        </form>
+   
+    </main>
+    <footer>
+        <ul>
+            <li><a>Advertising</a></li>
+            <li><a>Business</a></li>
+            <li><a>How Search works</a></li>
+            <li><a class="right-footer">Privacy</a></li>
+            <li><a class="right-footer">Terms</a></li>
+            <li><a class="right-footer">Settings</a></li>
+        </ul>
+      
+    </footer>
 </body>
 </html>
